gccida/c1/hex_digit_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/hex_digit_value/src/cpplex.c:2054:10: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
result = hex_value[( unsigned __int8)c]; 
         ^~~~~~~~~
         _hex_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/hex_digit_value/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/hex_digit_value/src/obj/cpplex.o] Error 1
